<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>eu.europeana.metis-processing-engine</groupId>
  <artifactId>metis-processing-engine</artifactId>
  <packaging>pom</packaging>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <flink-version>2.0.0</flink-version>
    <flink-shaded-guava.version>33.4.0-jre-20.0</flink-shaded-guava.version>
    <version.bytebuddy>1.14.19</version.bytebuddy>
    <metis.version>15-SNAPSHOT</metis.version>
    <jackson.version>2.16.1</jackson.version>
    <postgres.version>42.7.3</postgres.version>
    <netty.version>4.1.107.Final</netty.version>
    <jupiter.version>5.12.2</jupiter.version>
    <mockito.version>5.15.2</mockito.version>
    <awaitability.version>4.2.0</awaitability.version>
    <assertj.version>3.24.2</assertj.version>
    <wiremock.version>3.4.2</wiremock.version>
    <spring-boot.version>3.2.3</spring-boot.version>
  </properties>

  <modules>
    <module>docker/metis-processing-engine-flink/shared-libs</module>
    <module>commons</module>
    <module>common</module>
    <module>harvesting-commons</module>
    <module>media</module>
    <module>client</module>
    <module>validation</module>
    <module>oai</module>
    <module>transformation</module>
    <module>normalization</module>
    <module>enrichment</module>
    <module>indexing</module>
    <module>http</module>
    <module>blocking</module>
    <module>test-commons</module>
    <module>rest</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-framework-bom</artifactId>
        <version>6.1.5</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <repositories>
    <repository>
      <id>libs-release</id>
      <name>libs-release</name>
      <url>https://artifactory.eanadev.org/artifactory/libs-release</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>libs-snapshot</id>
      <name>libs-snapshot</name>
      <url>https://artifactory.eanadev.org/artifactory/libs-snapshot</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <distributionManagement>
    <repository>
      <id>artifactory.eanadev.org</id>
      <name>artifactory.eanadev.org-releases</name>
      <url>https://artifactory.eanadev.org/artifactory/libs-release-local</url>
    </repository>
    <snapshotRepository>
      <id>artifactory.eanadev.org</id>
      <name>artifactory.eanadev.org-snapshots</name>
      <url>https://artifactory.eanadev.org/artifactory/libs-snapshot-local</url>
    </snapshotRepository>
  </distributionManagement>
</project>
